# src/routes/auth.router.js
@@ -1,8 +1,12 @@
 import { Router } from "express";
-import { handleUserSignUp } from "../controllers/auth.controller.js";
+import {
+  handleUserSignUp,
+  handleLogin,
+} from "../controllers/auth.controller.js";
 
 const router = Router();
 
 router.post("/signup", handleUserSignUp);
+router.post("/login", handleLogin);
 
 export default router;
